--- a/src/pages/Main-page/MainPage.module.scss
+++ b/src/pages/Main-page/MainPage.module.scss
@@ -17,6 +17,12 @@
   cursor: pointer;
 }
 
+.listReset {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+
 .asideContainer {
   grid-column: 1;
   grid-row: span 3;
@@ -31,7 +37,6 @@
   border-radius: 0 16px 16px 0;
   border-right: 1.5px solid var(--10, rgba(21, 24, 28, 0.10));
   background-color: white;
-
 }
 
 .asideBtnsWrapper {
@@ -40,6 +45,13 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+}
+
+.tabsText {
+  display: flex;
+  align-items: center;
+  padding-left: 48px;
+  cursor: pointer;
 }
 
 .asideBtns {
@@ -93,7 +105,6 @@
   grid-column: 2;
   grid-row: 1;
   margin: 40px;
-  width: 100%;
   max-height: 160px;
   border-radius: 16px;
   border: 1.5px solid var(--10, rgba(21, 24, 28, 0.10));
@@ -105,9 +116,11 @@
 }
 
 .main {
+  height: 80vh;
   grid-column: 2;
   grid-row: 2;
   margin: 0 40px 0 40px;
+  border-top: 1.5px solid var(--10, rgba(21, 24, 28, 0.10));
 }
 
 .mainTasks {
@@ -116,7 +129,18 @@
   gap: 24px;
 }
 
+.mainTasksContainer {
+  padding: 15px;
+  height: 100%;
+  overflow: auto;
+  &::-webkit-scrollbar{
+    width: 0;
+  }
+
+}
+
 .taskWrapper {
+  height: 360px;
   padding: 20px;
   border-radius: 16px;
   border: 2px solid var(--10, rgba(21, 24, 28, 0.10));
