--- a/src/pages/Home-page/Home.module.scss
+++ b/src/pages/Home-page/Home.module.scss
@@ -68,3 +68,25 @@
     opacity: 0.7;
   }
 }
+
+.contentTitle {
+  font-family: $font-family-Unbounded;
+  font-weight: $bold-font-weight;
+  font-size: $h1-font-size;
+  line-height: $h1-line-height;
+  text-align: center;
+  color: $black-color;
+}
+
+.name {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  min-height: 50px;
+  margin-bottom: 80px;
+  font-family: $font-family-MinSans;
+  font-weight: $bold-font-weight;
+  font-size: 42px;
+  line-height: 27px;
+  color: $black-color;
+}
