--- a/src/components/Progressbar/Progressbar.module.scss
+++ b/src/components/Progressbar/Progressbar.module.scss
@@ -2,6 +2,7 @@
 
 .contentProgressBar {
   margin-top: 74px;
+  display: grid;
 }
 
 .textWrapper {
@@ -19,7 +20,8 @@
   opacity: 0.6;
 }
 
-.progressBarValue {
+.progressBar {
+  width: 100%;
   font-family: $font-family-MinSans;
   font-weight: 700;
   font-size: 16px;
@@ -27,58 +29,71 @@
   color: $black-color;
 }
 
-.progressBar {
-  position: relative;
-  width: 100%;
-  height: 8px;
-  background: #e1e1e4;
-  border-radius: 5px;
-
-  &::before {
-    content: ' ';
-    position: absolute;
-    width: 52px;
-    height: 8px;
-    background: #10a674;
-    border-radius: 5px;
-  }
-
-  &::after {
-    content: ' ';
-    position: absolute;
-    width: 195px;
-    height: 8px;
-    background: rgba(16, 166, 116, 0.3);
-    border-radius: 5px;
-  }
-
-  &__sizes {
-    &::before {
-      width: 195px;
-    }
-
-    &::after {
-      width: 390px;
-    }
-  }
-
-  &_loc {
-    &::before {
-      width: 195px;
-    }
-
-    &::after {
-      width: 390px;
-    }
-  }
-
-  &_end {
-    &::before {
-      width: 390px;
-    }
-
-    &::after {
-      width: 592px;
-    }
-  }
+progress {
+  /* style rules */
 }
+progress::-webkit-progress-bar {
+  /* style rules */
+}
+progress::-webkit-progress-value {
+  /* style rules */
+}
+progress::-moz-progress-bar {
+  /* style rules */
+}
+
+//.progressBar {
+//  position: relative;
+//  width: 100%;
+//  height: 8px;
+//  background: #e1e1e4;
+//  border-radius: 5px;
+//
+//  &::before {
+//    content: ' ';
+//    position: absolute;
+//    width: 52px;
+//    height: 8px;
+//    background: #10a674;
+//    border-radius: 5px;
+//  }
+//
+//  &::after {
+//    content: ' ';
+//    position: absolute;
+//    width: 195px;
+//    height: 8px;
+//    background: rgba(16, 166, 116, 0.3);
+//    border-radius: 5px;
+//  }
+//
+//  &__sizes {
+//    &::before {
+//      width: 195px;
+//    }
+//
+//    &::after {
+//      width: 390px;
+//    }
+//  }
+//
+//  &_loc {
+//    &::before {
+//      width: 195px;
+//    }
+//
+//    &::after {
+//      width: 390px;
+//    }
+//  }
+//
+//  &_end {
+//    &::before {
+//      width: 390px;
+//    }
+//
+//    &::after {
+//      width: 592px;
+//    }
+//  }
+//}
